Change backend login from openID into google login. Edited enki config file and add a TODO list file

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta charset="utf-8">
+  <!-- Bootstrap CSS CDN -->
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 
   <title><%= enki_config[:title] %> - Admin</title>
