--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -2,6 +2,8 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta charset="utf-8">
+  <!-- Bootstrap CSS CDN -->
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
   <title><%= enki_config[:title] %> - Admin Login</title>
   <%= stylesheet_link_tag 'login' %>
 </head>
@@ -16,5 +18,7 @@
       </ul>
     </div>
   </div>
+<!-- Bootstrap Javascript CDN -->
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 </body>
 </html>
