--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,6 +1,8 @@
+<div class="title">
 <h1>Comments</h1>
+</div>
 
-<table id='comments'>
+<table id='comments' class="table table-hover">
   <thead>
     <tr>
       <th>Created At</th>
