--- a/app/views/admin/comments/_comment.html.erb
+++ b/app/views/admin/comments/_comment.html.erb
@@ -1,12 +1,12 @@
 <tr id="comment-<%= comment.id %>" class="<%= cycle('', 'alt') %>">
-  <td class='created_at'><%= comment.created_at.strftime('%d %b, %Y') %></td>
+  <td class='created_at'><span class="btn btn-small btn-info"><%= comment.created_at.strftime('%d %b, %Y') %></span></td>
   <td class='author'><%= link_to(comment.author, admin_comment_path(comment)) %></td>
   <td><%= truncate(comment.body, :length => 40) %></td>
   <td><%= link_to(comment.post_title, admin_post_path(comment.post))%></td>
   <td>
-    <%= link_to(image_tag('silk/pencil.png', :alt => 'edit'), admin_comment_path(comment)) %>
+    <%= link_to(image_tag('silk/pencil.png', :alt => 'edit')+"Edit", admin_comment_path(comment), {:class => "btn btn-primary"}) %>
     <%= form_for(comment, :as => :comment, :url => admin_comment_path(comment), :html => {:class => 'delete-item', :method => :delete}) do |form| -%>
-      <%= image_submit_tag("silk/delete.png", :alt => "Delete Comment") %>
+      <%= submit_tag 'Delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
     <% end -%>
   </td>
 </tr>
