--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -1,4 +1,6 @@
+<div class="title">
 <h1>Editing page - <%= link_to(@page.title, page_path(@page.slug)) %></h1>
+</div>
 
 <%= semantic_form_for([:admin, @page]) do |form| -%>
   <%= render :partial => 'form', :locals => {:form => form} %>
