--- a/app/views/admin/undo_items/index.html.erb
+++ b/app/views/admin/undo_items/index.html.erb
@@ -1,5 +1,7 @@
+<div class="title">
 <h1>Recent actions</h1>
-<table>
+</div>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Date</th>
@@ -11,11 +13,11 @@
   <tbody>
   <% @undo_items.each do |undo_item| -%>
     <tr class="<%= cycle('', 'alt') %>">
-      <td><%= undo_item.created_at.strftime('%d %b, %Y') %></td>
+      <td><span class="btn btn-small btn-info"><%= undo_item.created_at.strftime('%d %b, %Y') %></span></td>
       <td><%= undo_item.description %></td>
       <td>
         <%= form_for(undo_item, :as => :undo_item, :url => undo_admin_undo_item_path(undo_item), :html => {:class => 'undo-item', :method => :post}) do |form| -%>
-          <%= image_submit_tag("silk/arrow_undo.png", :alt => 'Undo') %>
+          <%= submit_tag 'Undo', :confirm => 'Are you sure?', :class => 'btn btn-success' %>
         <% end -%>
       </td>
     </tr>
