--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,24 +35,10 @@
     <div id="nav">
       <ul class="nav nav-pills">
         <li><%= nav_link_to("Dashboard", admin_root_path, :accesskey => '1') %></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" id="post-dropdown" data-toggle="dropdown" href="#">
-            Posts <b class="caret"></b>
-          </a>
-          <ul id="posts-dropdown-menu" class="dropdown-menu" role="menu">  
-            <li><%= nav_link_to("All Posts", admin_posts_path, :accesskey => '2') %> </li>
-            <li><%= nav_link_to("Create new post", new_admin_post_path, :accesskey => 'n') %></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" id="page-dropdown" data-toggle="dropdown" href="#">
-            Pages <b class="caret"></b>
-          </a>
-          <ul id="pages-dropdown-menu" class="dropdown-menu" role="menu">  
-            <li><%= nav_link_to("All Pages", admin_pages_path, :accesskey => '3') %> </li>
-            <li><%= nav_link_to("Create new page", new_admin_page_path, :accesskey => 'p') %></li>
-          </ul>
-        </li>
+        <li><%= nav_link_to("Posts", admin_posts_path, :accesskey => '2') %> </li>
+        <!-- <li><%= nav_link_to("Create new post", new_admin_post_path, :accesskey => 'n') %></li> -->
+        <li><%= nav_link_to("Pages", admin_pages_path, :accesskey => '3') %> </li>
+        <!-- <li><%= nav_link_to("Create new page", new_admin_page_path, :accesskey => 'p') %></li> -->
 
         <li><%= nav_link_to("Comments",  admin_comments_path,   :accesskey => '4') %></li>
         <li><%= nav_link_to("Actions",   admin_undo_items_path, :accesskey => '5') %></li>
