--- a/app/views/admin/pages/new.html.erb
+++ b/app/views/admin/pages/new.html.erb
@@ -5,6 +5,6 @@
 <%= semantic_form_for([:admin, @page]) do |form| -%>
   <%= render :partial => 'form', :locals => {:form => form} %>
   <%= form.actions do -%>
-    <%= form.action :submit, :as => :button -%>
+    <%= form.action :submit, :as => :button, :button_html => {:class => 'btn btn-primary'}-%>
   <% end -%>
 <% end -%>
