Minor change to fonts.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -191,14 +191,8 @@ img
 
 #navigation h2
 {
+  font-family: 'Fredericka the Great', cursive;
   display: inline;
-}
-
-
-#navigation label
-{
-  margin-left: 0;
-  font-style: normal;
 }
 
 #navigation ul
