--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,10 +35,10 @@ body
 }
 
 #content {
-  width: 900px;
+  width: 940px;
   margin: 5px auto;
   position: relative;
-  padding-right: 55px;
+  padding-right: 15px;
 /*	display: inline;*/
 }
 
@@ -61,7 +61,7 @@ body
 {
   height: 308px;
   clear: both;
-  background: url(/assets/background/chalkboard1.jpg);
+  background: url(/assets/background/banner.jpg);
 }
 
 #banner, #banner-link
@@ -79,6 +79,11 @@ body
   display: inline;
 }
 
+#nav-bar .nav 
+{
+  padding-top: 230px;
+}
+
 #nav-bar .nav a
 {
   display: inline;
@@ -90,7 +95,6 @@ body
 {
   border: none;
   padding-left: 45px;
-  padding-top: 40px;
 }
 
 #nav-bar .underscore
@@ -192,7 +196,7 @@ img
 #navigation
 {
   float: left;
-  width: 10%;
+  width: 15%;
   /* position: absolute;
   top: -1px;
   right: -20px; */
@@ -244,7 +248,7 @@ img
 #main
 {
   float: left;
-  width: 85%;
+  width: 80%;
   padding-right: 30px;
   padding-left: 0px;
   padding-top: 0px;
