--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
 <body>
   <div id="page_container" class="container">
       <div class="page_header">
+        <!--
         <img src="/assets/background/banner.png" id="banner">
+        -->
         <div id="nav-bar">
           <div class="nav">
             <% nav_list = ['home','projects','thoughts','codes','random', 'about'] -%>
@@ -42,6 +44,7 @@
       </div>
 
       <div id="navigation">
+        <i class="icon-file"></i>
         <h2>Pages</h2>
         <ul>
           <% page_links_for_navigation.each do |link| -%>
@@ -49,6 +52,7 @@
           <% end -%>
         </ul>
         <% unless category_links_for_navigation.empty? -%>
+          <i class="icon-th-list"></i>
           <h2>Categories</h2>
           <ul>
             <% category_links_for_navigation.each do |link| -%>
@@ -58,8 +62,8 @@
         <% end -%>
         <form method="get" id="sform" action="http://www.google.com/search">
           <div>
+            <i class="icon-search"></i>
             <h2>Search</h2>
-
             <input type="text" id="q" value="" name="q">
             <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
           </div>
