--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,4 @@
+<% cache(post) do %>
 <h1><%= link_to(post.title, post_path(post)) %></h1>
 <div class="entry-body">
   <%== post.body_html %>
@@ -11,3 +12,4 @@
     <% end -%>
   </ul>
 </div>
+<% end %>
