--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
     <li class="date">Posted on <%= format_post_date(post.published_at) %></li>
     <li class="comments"><%= link_to pluralize(post.approved_comments.size, "comment"), post_path(post, :anchor => 'comments') %></li>
     <% unless post.tags.empty? -%>
-      <li class="tags">Tagged <%= linked_tag_list(post.tags) %></li>
+      <li class="tags">Tagged <i class="icon-tag"></i> <%= linked_tag_list(post.tags) %></li>
     <% end -%>
   </ul>
 </div>
