--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -177,7 +177,10 @@ a:hover
 
 img
 {
-  border: solid 1px black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
 }
 
 /* Img class for Carousel */
