Host images on CDN

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,7 +61,8 @@ body
 {
   height: 308px;
   clear: both;
-  background: url(/images/background/banner.jpg);
+  /*background: url(/images/background/banner.jpg);*/
+  background: url(https://d3jpl91pxevbkh.cloudfront.net/hvfis3trp/image/upload/v1361129529/banner.jpg);
 }
 
 #banner, #banner-link
