--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,11 +35,11 @@ body
 }
 
 #content {
-  width: 940px;
+  width: 1000px;
   margin: 5px auto;
   position: relative;
-  padding-right: 15px;
-/*	display: inline;*/
+/*	  padding-right: 15px;
+display: inline;*/
 }
 
 #footer
@@ -82,7 +82,8 @@ body
 
 #nav-bar .nav 
 {
-  padding-top: 230px;
+  padding-top: 240px;
+  padding-left: 30;
 }
 
 #nav-bar .nav a
@@ -95,23 +96,8 @@ body
 #nav-bar .nav img
 {
   border: none;
-  padding-left: 45px;
-}
-
-#nav-bar .underscore
-{
-  background-repeat: repeat-y;
-  height: 23px;
-  margin-top: -25px;
-
-}
-
-#nav-bar .underscore div
-{
-  display: none;
-  float: left;
-  margin-left: 43px;
-  background: url(/images/menu/underscore.png);
+  /*padding-left: 45px;*/
+  padding-left: 30px;
 }
 
 h1
@@ -197,7 +183,7 @@ img
 #navigation
 {
   float: left;
-  width: 15%;
+  width: 20%;
   /* position: absolute;
   top: -1px;
   right: -20px; */
@@ -246,11 +232,15 @@ img
   margin-bottom: 1em;
 }
 
+#profile 
+{
+  margin: 20px auto;
+}
 #main
 {
   float: left;
-  width: 80%;
-  padding-right: 30px;
+  width: 75%;
+  padding-right: 20px;
   padding-left: 0px;
   padding-top: 0px;
   padding-bottom: 40px;
